@@ -2,10 +2,7 @@ package net.lab1024.sa.base.module.support.file.service;
 
 import cn.hutool.core.date.DatePattern;
 import cn.hutool.core.date.LocalDateTimeUtil;
-import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.model.CannedAccessControlList;
-import com.amazonaws.services.s3.model.ObjectMetadata;
-import com.amazonaws.services.s3.model.S3Object;
+import cn.hutool.core.util.IdUtil;
 import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import net.lab1024.sa.base.common.code.SystemErrorCode;
@@ -22,21 +19,27 @@ import net.lab1024.sa.base.module.support.file.domain.vo.FileVO;
 import net.lab1024.sa.base.module.support.redis.RedisService;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.io.FilenameUtils;
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.springframework.util.FileCopyUtils;
 import org.springframework.web.multipart.MultipartFile;
+import software.amazon.awssdk.core.ResponseBytes;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.core.sync.ResponseTransformer;
+import software.amazon.awssdk.regions.Region;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.*;
+import software.amazon.awssdk.services.s3.presigner.S3Presigner;
+import software.amazon.awssdk.services.s3.presigner.model.GetObjectPresignRequest;
+import software.amazon.awssdk.services.s3.presigner.model.PresignedGetObjectRequest;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
-import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.time.LocalDateTime;
-import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.UUID;
 
 /**
  * 云计算 实现
@@ -45,7 +48,7 @@ import java.util.UUID;
  * @Date 2019年10月11日 15:34:47
  * @Wechat zhuoda1024
  * @Email lab1024@163.com
- * @Copyright  <a href="https://1024lab.net">1024创新实验室</a>
+ * @Copyright <a href="https://1024lab.net">1024创新实验室</a>
  */
 @Slf4j
 public class FileStorageCloudServiceImpl implements IFileStorageService {
@@ -66,7 +69,7 @@ public class FileStorageCloudServiceImpl implements IFileStorageService {
     private static final String USER_METADATA_FILE_SIZE = "file-size";
 
     @Resource
-    private AmazonS3 amazonS3;
+    private S3Client s3Client;
 
     @Resource
     private FileConfig cloudConfig;
@@ -86,44 +89,40 @@ public class FileStorageCloudServiceImpl implements IFileStorageService {
         }
 
         String fileType = FilenameUtils.getExtension(originalFileName);
-        String uuid = UUID.randomUUID().toString().replaceAll("-", "");
+        String uuid = IdUtil.fastSimpleUUID();
         String time = LocalDateTimeUtil.format(LocalDateTime.now(), DatePattern.PURE_DATETIME_FORMATTER);
-        String fileKey = path + uuid + "_" + time+ "." + fileType;
+        String fileKey = path + uuid + "_" + time + "." + fileType;
 
         // 文件名称 URL 编码
         String urlEncoderFilename;
-        try {
-            urlEncoderFilename = URLEncoder.encode(originalFileName, StandardCharsets.UTF_8.name());
-        } catch (UnsupportedEncodingException e) {
-            log.error("文件上传服务URL ENCODE-发生异常：", e);
-            return ResponseDTO.error(SystemErrorCode.SYSTEM_ERROR, "上传失败");
-        }
-        ObjectMetadata meta = new ObjectMetadata();
-        meta.setContentEncoding(StandardCharsets.UTF_8.name());
-        meta.setContentDisposition("attachment;filename=" + urlEncoderFilename);
+        urlEncoderFilename = URLEncoder.encode(originalFileName, StandardCharsets.UTF_8);
         Map<String, String> userMetadata = new HashMap<>(10);
         userMetadata.put(USER_METADATA_FILE_NAME, urlEncoderFilename);
         userMetadata.put(USER_METADATA_FILE_FORMAT, fileType);
         userMetadata.put(USER_METADATA_FILE_SIZE, String.valueOf(file.getSize()));
-        meta.setUserMetadata(userMetadata);
-        meta.setContentLength(file.getSize());
-        meta.setContentType(this.getContentType(fileType));
+
+        PutObjectRequest putObjectRequest = PutObjectRequest.builder().bucket(cloudConfig.getBucketName()).key(fileKey).metadata(userMetadata).contentLength(file.getSize()).contentType(this.getContentType(fileType)).contentEncoding(StandardCharsets.UTF_8.name()).contentDisposition("attachment;filename=" + urlEncoderFilename).build();
+        InputStream inputStream = null;
         try {
-            amazonS3.putObject(cloudConfig.getBucketName(), fileKey, file.getInputStream(), meta);
+            inputStream = file.getInputStream();
+            s3Client.putObject(putObjectRequest, RequestBody.fromInputStream(inputStream, file.getSize()));
         } catch (IOException e) {
             log.error("文件上传-发生异常：", e);
             return ResponseDTO.error(SystemErrorCode.SYSTEM_ERROR, "上传失败");
+        } finally {
+            IOUtils.closeQuietly(inputStream);
         }
         // 根据文件路径获取并设置访问权限
-        CannedAccessControlList acl = this.getACL(path);
-        amazonS3.setObjectAcl(cloudConfig.getBucketName(), fileKey, acl);
+        ObjectCannedACL acl = this.getACL(path);
+        PutObjectAclRequest aclRequest = PutObjectAclRequest.builder().bucket(cloudConfig.getBucketName()).key(fileKey).acl(this.getACL(path)).build();
+        s3Client.putObjectAcl(aclRequest);
         // 返回上传结果
         FileUploadVO uploadVO = new FileUploadVO();
         uploadVO.setFileName(originalFileName);
         uploadVO.setFileType(fileType);
         // 根据 访问权限 返回不同的 URL
         String url = cloudConfig.getUrlPrefix() + fileKey;
-        if (CannedAccessControlList.Private.equals(acl)) {
+        if (ObjectCannedACL.PRIVATE.equals(acl)) {
             // 获取临时访问的URL
             url = this.getFileUrl(fileKey).getData();
         }
@@ -136,8 +135,8 @@ public class FileStorageCloudServiceImpl implements IFileStorageService {
     /**
      * 获取文件url
      *
-     * @param fileKey
-     * @return
+     * @param fileKey 文件key
+     * @return url
      */
     @Override
     public ResponseDTO<String> getFileUrl(String fileKey) {
@@ -159,10 +158,14 @@ public class FileStorageCloudServiceImpl implements IFileStorageService {
             if (fileVO == null) {
                 return ResponseDTO.userErrorParam("文件不存在");
             }
+            GetObjectRequest getUrlRequest = GetObjectRequest.builder().bucket(cloudConfig.getBucketName()).key(fileKey).build();
+            GetObjectPresignRequest getObjectPresignRequest = GetObjectPresignRequest.builder().signatureDuration(Duration.ofSeconds(cloudConfig.getPrivateUrlExpireSeconds())).getObjectRequest(getUrlRequest).build();
 
-            Date expiration = new Date(System.currentTimeMillis() + cloudConfig.getPrivateUrlExpireSeconds() * 1000L);
-            URL url = amazonS3.generatePresignedUrl(cloudConfig.getBucketName(), fileKey, expiration);
-            fileVO.setFileUrl(url.toString());
+            S3Presigner presigner = S3Presigner.builder().region(Region.of(cloudConfig.getRegion())).build();
+
+            PresignedGetObjectRequest presignedGetObjectRequest = presigner.presignGetObject(getObjectPresignRequest);
+            String url = presignedGetObjectRequest.url().toString();
+            fileVO.setFileUrl(url);
             redisService.set(fileRedisKey, fileVO, cloudConfig.getPrivateUrlExpireSeconds() - 5);
         }
 
@@ -175,11 +178,11 @@ public class FileStorageCloudServiceImpl implements IFileStorageService {
      */
     @Override
     public ResponseDTO<FileDownloadVO> download(String key) {
-        //获取oss对象
-        S3Object s3Object = amazonS3.getObject(cloudConfig.getBucketName(), key);
+
         // 获取文件 meta
-        ObjectMetadata metadata = s3Object.getObjectMetadata();
-        Map<String, String> userMetadata = metadata.getUserMetadata();
+        HeadObjectRequest objectRequest = HeadObjectRequest.builder().bucket(this.cloudConfig.getBucketName()).key(key).build();
+        HeadObjectResponse headObjectResponse = s3Client.headObject(objectRequest);
+        Map<String, String> userMetadata = headObjectResponse.metadata();
         FileMetadataVO metadataDTO = null;
         if (MapUtils.isNotEmpty(userMetadata)) {
             metadataDTO = new FileMetadataVO();
@@ -190,43 +193,31 @@ public class FileStorageCloudServiceImpl implements IFileStorageService {
             metadataDTO.setFileSize(fileSize);
         }
 
-        // 获得输入流
-        InputStream objectContent = s3Object.getObjectContent();
-        try {
-            // 输入流转换为字节流
-            byte[] buffer = FileCopyUtils.copyToByteArray(objectContent);
+        //获取oss对象
+        GetObjectRequest getObjectRequest = GetObjectRequest.builder().bucket(cloudConfig.getBucketName()).key(key).build();
+        ResponseBytes<GetObjectResponse> s3ClientObject = s3Client.getObject(getObjectRequest, ResponseTransformer.toBytes());
 
-            FileDownloadVO fileDownloadVO = new FileDownloadVO();
-            fileDownloadVO.setData(buffer);
-            fileDownloadVO.setMetadata(metadataDTO);
-            return ResponseDTO.ok(fileDownloadVO);
-        } catch (IOException e) {
-            log.error("文件下载-发生异常：", e);
-            return ResponseDTO.error(SystemErrorCode.SYSTEM_ERROR, "下载失败");
-        } finally {
-            try {
-                // 关闭输入流
-                objectContent.close();
-                s3Object.close();
-            } catch (IOException e) {
-                log.error("文件下载-发生异常：", e);
-            }
-        }
+        // 输入流转换为字节流
+        byte[] buffer = s3ClientObject.asByteArray();
+        FileDownloadVO fileDownloadVO = new FileDownloadVO();
+        fileDownloadVO.setData(buffer);
+        fileDownloadVO.setMetadata(metadataDTO);
+        return ResponseDTO.ok(fileDownloadVO);
     }
 
     /**
      * 根据文件夹路径 返回对应的访问权限
      *
-     * @param fileKey
-     * @return
+     * @param fileKey 文件key
+     * @return 权限
      */
-    private CannedAccessControlList getACL(String fileKey) {
+    private ObjectCannedACL getACL(String fileKey) {
         // 公用读
         if (fileKey.contains(FileFolderTypeEnum.FOLDER_PUBLIC)) {
-            return CannedAccessControlList.PublicRead;
+            return ObjectCannedACL.PUBLIC_READ;
         }
         // 其他默认私有读写
-        return CannedAccessControlList.Private;
+        return ObjectCannedACL.PRIVATE;
     }
 
     /**
@@ -235,11 +226,11 @@ public class FileStorageCloudServiceImpl implements IFileStorageService {
      * ps：不能删除fileKey不为空的文件夹
      *
      * @param fileKey 文件or文件夹
-     * @return
      */
     @Override
     public ResponseDTO<String> delete(String fileKey) {
-        amazonS3.deleteObject(cloudConfig.getBucketName(), fileKey);
+        DeleteObjectRequest deleteObjectRequest = DeleteObjectRequest.builder().bucket(cloudConfig.getBucketName()).key(fileKey).build();
+        s3Client.deleteObject(deleteObjectRequest);
         return ResponseDTO.ok();
     }
 
